- Le code est en parti Fini  - Reste a faire : - Checker tout les commentairez (en rajouter si manquant) 							       - Verifier la cohérence avec la Charte graphie (couleur et Font) 					       - Ajouter l'argument a passer dans le main (dirPath) 				       - Integrer correctement le programme a l'infra (verif des chemins) 					       - Vérifier l'adequation complète au CdC 					       - Faire le Jar et/ou .exe